// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prettier snapshot 1`] = `
{
  "overrides": [],
  "printWidth": 140,
}
`;

exports[`prettier snapshot with ignore 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
build
"
`;

exports[`prettier snapshot with ignore 2`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
src/example.ts
"
`;
